--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,12 +1,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  reg_no: MyString
-  f_name: MyString
-  l_name: MyString
-  email: MyString
-  phone: MyString
-  school: MyString
+terrence:
+  reg_no: CI/00030/2013
+  f_name: Terrence
+  l_name: Ryan
+  email: terr@gmail.com
+  phone: 0720778654
+  school: Computing
+  password_digest: <%= User.digest('password') %>    
 
 two:
   reg_no: MyString
