adding a test database

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,10 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+
+  test: 
+  adapter: sqlite3
+  database: db/test/sqlite3
+  pool: 5
+  timeout: 5000
+
