--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,3 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
   pool: 5
@@ -11,24 +5,15 @@ default: &default
 
 development:
   <<: *default
-  database: db/development.sqlite3
+  database: shadaha_dev
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test: &test
   <<: *default
-  database: db/test.sqlite3
+  database: shahada_test
 
 production:
   <<: *default
-
-  test: 
-  adapter: sqlite3
-  database: db/test/sqlite3
-  pool: 5
-  timeout: 5000
-
-
-cucumber:
-  <<: *test
+  database: shahada_production
