--- a/config/database.yml
+++ b/config/database.yml
@@ -15,5 +15,8 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: my_production_database
+  pool: 5
+  timeout: 5000
+
